--- a/oluwayomi.oke/05_HTML-and-CSS/CSS/style.css
+++ b/oluwayomi.oke/05_HTML-and-CSS/CSS/style.css
@@ -70,8 +70,8 @@ header .hero {
 	width: 100%;
 	height: calc(100vh - 70px);
 	background: #ffffff
-		url("../images/pexels-isabella-rubie-13304393.jpg")
-		no-repeat center center/cover;
+		url("../images/home-1.jpg")
+		no-repeat bottom center/cover;
 	position: relative;
 
 	display: flex;
@@ -89,10 +89,10 @@ header .hero:after {
 
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0)
+	background: rgba(0, 0, 0, 0.1)
 		linear-gradient(
 			to bottom,
-			rgba(0, 0, 0, 0) 0px,
+			rgba(0, 0, 0, 0.1) 0px,
 			rgba(0, 0, 0, 0.6) 100%
 		)
 		repeat 0 0;
